# django-docker-template

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: entrypoint.sh  manage.py  uwsgi.ini
src/happy/: asgi.py  settings.py  urls.py  wsgi.py
