[tool.poetry]
name = "happy"
version = "1.1.0"
description = "A template of a ready-to-use dockerized Django application. 😄"
authors = ["Matteo Bilotta <me@byloth.dev>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
channels = "^4.1.0"
channels-redis = "^4.2.0"
daphne = "^4.1.0"
django = "^5.0.4"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
redis = {extras = ["hiredis"], version = "^5.0.3"}
twisted = {extras = ["http2", "tls"], version = "^24.3.0"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}

# SMELLS: Inside the Docker container, `setuptools` will be added by `apk` to this specific version.
#         This line forces `poetry` to keep this version without trying to upgrade it (which would fail).
#
setuptools = "68.2.2"

[tool.poetry.dev-dependencies]
pylint = "^3.1.0"
pylint-django = "^2.5.5"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
