[project]
name = "happy"
version = "1.2.0"
description = "A template of a ready-to-use dockerized Django application. 😄"
authors = [
    {name = "Matteo Bilotta",email = "me@byloth.dev"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "channels (>=4.2.0,<5.0.0)",
    "channels-redis (>=4.2.0,<5.0.0)",
    "daphne (>=4.2.0,<5.0.0)",
    "django (>=5.2.0,<6.0.0)",
    "psycopg[binary,pool] (>=3.2.0,<4.0.0)",
    "redis[hiredis] (>=6.2.0,<7.0.0)",
    "twisted[http2,tls] (>=25.5.0,<26.0.0)",
    "uvicorn[standard] (>=0.35.0,<1.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.4.1"
pylint-django = "^2.6.1"

[tool.poetry.group.prod.dependencies]
# SMELLS: Inside the Docker container, `setuptools` will be added by `apk` to this specific version.
#         This line forces `poetry` to keep this version without trying to upgrade it (which would fail).
#
setuptools = "70.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
